latte/tests/good/str_gc5.lat
int main() {
  string s = "Asd";
  int i = 10;
  while (i > 0) {
    i--;
    s = s;
  }
  printInt(1);
  return 0;
}

