latte/tests/bad/type/class/duplicate_method.lat
class A {
  void f() {}
  void f() {}
}

int main() {
  return 0;
}
